--- a/.insomnia/Request/req_86c1444800c444f4ad785645430b2559.yml
+++ b/.insomnia/Request/req_86c1444800c444f4ad785645430b2559.yml
@@ -1,9 +1,9 @@
 _id: req_86c1444800c444f4ad785645430b2559
 type: Request
 parentId: fld_70c093bd434f46caa7929be23f6019a9
-modified: 1663844520883
+modified: 1663893803603
 created: 1663844210715
-url: "{{ _.route }}groups/user/39"
+url: "{{ _.route }}groups/user/{id}"
 name: GetGroupsByUserId
 description: ""
 method: GET
