--- a/.insomnia/Request/req_4465aef57bfc49eaadfc6b95d8a623a4.yml
+++ b/.insomnia/Request/req_4465aef57bfc49eaadfc6b95d8a623a4.yml
@@ -1,22 +1,25 @@
-_id: req_941ff69664994c899bca329c45ce64cf
+_id: req_4465aef57bfc49eaadfc6b95d8a623a4
 type: Request
-parentId: fld_c7fdcabb514b4582bae72517189d3c4b
-modified: 1663898296342
-created: 1663748603575
-url: "{{ _.route }}users/{id}"
-name: DeleteUser
+parentId: fld_70c093bd434f46caa7929be23f6019a9
+modified: 1663901638076
+created: 1663901513872
+url: "{{ _.route }}groups/0/members/73"
+name: EditGroupMemberRole
 description: ""
-method: DELETE
+method: PATCH
 body:
   mimeType: application/json
-  text: ""
+  text: |-
+    {
+    	"role": "Trabajador"
+    }
 parameters: []
 headers:
   - name: Content-Type
     value: application/json
-    id: pair_e3c11c87dfd348dfb8d53dc1704ae3c2
+    id: pair_ace160372de84d25b5c1f1befbe46220
 authentication: {}
-metaSortKey: -1663736699805.75
+metaSortKey: -1663763181274.3125
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
