--- a/.insomnia/Request/req_30b440eb354a451ab80d93d49782ccae.yml
+++ b/.insomnia/Request/req_30b440eb354a451ab80d93d49782ccae.yml
@@ -1,12 +1,12 @@
 _id: req_30b440eb354a451ab80d93d49782ccae
 type: Request
 parentId: fld_70c093bd434f46caa7929be23f6019a9
-modified: 1663905146208
+modified: 1663918130938
 created: 1663892583994
 url: "{{ _.route }}groups/{id}/members/{id}"
 name: AddGroupMember
 description: ""
-method: POST
+method: PATCH
 body:
   mimeType: application/json
   text: |-
