--- a/.insomnia/Request/req_3b9a39af3de5492797ecb7b00310464d.yml
+++ b/.insomnia/Request/req_3b9a39af3de5492797ecb7b00310464d.yml
@@ -1,17 +1,17 @@
-_id: req_6243bb2571464483b864d062d2e82a6e
+_id: req_3b9a39af3de5492797ecb7b00310464d
 type: Request
-parentId: fld_70c093bd434f46caa7929be23f6019a9
-modified: 1663919159171
-created: 1663845935655
-url: "{{ _.route }}groups/{id}/quests"
-name: GetGroupQuests
+parentId: fld_1bc41b40497d47c8887fb6176dce998c
+modified: 1663922264109
+created: 1663922253935
+url: "{{ _.route }}/quests"
+name: GetQuests
 description: ""
 method: GET
 body: {}
 parameters: []
 headers: []
 authentication: {}
-metaSortKey: -1663771912686.5
+metaSortKey: -1663922200155
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
