--- a/.insomnia/Request/req_a9e9a58ffeeb40af97841fa7a8cb2bfa.yml
+++ b/.insomnia/Request/req_a9e9a58ffeeb40af97841fa7a8cb2bfa.yml
@@ -1,17 +1,17 @@
-_id: req_6243bb2571464483b864d062d2e82a6e
+_id: req_a9e9a58ffeeb40af97841fa7a8cb2bfa
 type: Request
 parentId: fld_70c093bd434f46caa7929be23f6019a9
-modified: 1663919159171
-created: 1663845935655
-url: "{{ _.route }}groups/{id}/quests"
-name: GetGroupQuests
+modified: 1663913569302
+created: 1663913539254
+url: "{{ _.route }}groups/{id}/roles"
+name: GetGroupRoles
 description: ""
 method: GET
 body: {}
 parameters: []
 headers: []
 authentication: {}
-metaSortKey: -1663771912686.5
+metaSortKey: -1663771912649
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
